--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -18,7 +18,7 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
-        <TextBlock Foreground="White" FontSize="20" Margin="40,10,-20,10"><Run Text="Select a Disk to kebab"/></TextBlock>
+        <TextBlock Foreground="White" FontSize="20" Margin="43,0,-23,20"><Run Text="Select a Disk to kebab"/></TextBlock>
         <Button BorderThickness="0"
         Background="Yellow"
         FontSize="25"
@@ -31,9 +31,9 @@
         </Button>
 
 
-        <ComboBox  Name="DiskComboBox" Margin="0,0,0,15"
-                  DisplayMemberPath="Name" SelectedValuePath="Name" Grid.Row="1"/>
-        <TextBlock Name="show" Foreground="White" FontSize="20" Margin="10,62,10,-39" Grid.Row="1" />
+        <ComboBox  Name="DiskComboBox" Margin="0,27,0,36"
+                  DisplayMemberPath="Name" SelectedValuePath="Name" Grid.RowSpan="2"/>
+        <TextBlock Name="show" Foreground="White" FontSize="20" Margin="10,19,10,4" Grid.Row="1" />
         <Grid Margin="20">
             <ProgressBar Name="status_bar" Minimum="0" Maximum="100" Value="0" Margin="4,394,-4,-396" />
         </Grid>
